Note about changing permgen setting on Linux upgrade